2003-09-80  Nathanael Nerode  <neroden@gcc.gnu.org>

	* config.gcc: Default use_fixproto to 'no'.

2003-09-30  Richard Sandiford  <rsandifo@redhat.com>

	PR optimization/12345
	* config/mips/mips-protos.h (mips_restore_gp): Remove.
	(mips_gp_save_slot): Declare.
	* config/mips/mips.c (mips_restore_gp): Remove in favor of...
	(mips_gp_save_slot): ...this new function.
	* config/mips/mips.md (exception_receiver): Use mips_gp_save_slot
	and mips_output_move to generate the output template.
	(call_internal): Force splitting if TARGET_SPLIT_CALLS.  Don't emit
	a gp load after a noreturn call.  Load the gp using a move rather
	than an exception_receiver pattern.
	(call_value_internal, call_value_multiple_internal): Likewise.
	(call_split, call_value_split, call_value_multiple_split): Clobber $28.

2003-09-30  Carlo Wood  <carlo@alinoe.com>

	PR debug/12319
        * cfglayout.c (insn_scope):  Use prologue_locator and
	epilogue_locator; return the outer function scope for
	pro- and epilogue insns.

2003-09-29  Zack Weinberg  <zack@codesourcery.com>

	* objc/objc-act.c (encode_type): Encode INTEGER_TYPEs and
	REAL_TYPEs based on the bitsize of the type's mode, not the
	mode directly.

2003-09-29  Rainer Orth  <ro@TechFak.Uni-Bielefeld.DE>

	* dwarf2out.c (default_eh_frame_section): Split into ...
	(named_section_eh_frame_section, collect2_eh_frame_section): ... new
	functions.
	* output.h (named_section_eh_frame_section): Declare.
	(collect2_eh_frame_section): Likewise.

2003-09-29  Zack Weinberg  <zack@codesourcery.com>

	* real.c (real_sqrt): Use get_canonical_qnan directly.

	* dwarf2out.c (add_const_value_attribute): Use real_to_target.

	* varasm.c (assemble_real): Use real_to_target directly,
	calculate the number of significant elements of the result
	array and write them out in a loop, instead of using a giant
	switch statement to pick the correct REAL_VALUE_TO_TARGET_*
	macro.

Mon Sep 29 22:59:05 CEST 2003  Jan Hubicka  <jh@suse.cz>

	PR c++/12175